--- a/values.yaml
+++ b/values.yaml
@@ -361,6 +361,9 @@ registry:
     image:
       repository: goharbor/registry-photon
       tag: v2.7.1-patch-2819-2553-v1.10.1
+    initContainerImage:
+      repository: busybox
+      tag: latest
 
     # resources:
     #  requests:
@@ -408,6 +411,9 @@ chartmuseum:
   image:
     repository: goharbor/chartmuseum-photon
     tag: v0.9.0-v1.10.1
+  initContainerImage:
+    repository: busybox
+    tag: latest
   replicas: 1
   # resources:
   #  requests:
@@ -536,6 +542,10 @@ redis:
     image:
       repository: goharbor/redis-photon
       tag: v1.10.1
+    # the image used by the init container
+    initContainerImage:
+      repository: busybox
+      tag: latest
     # resources:
     #  requests:
     #    memory: 256Mi
